Instructions on how to build and run DRAT.